Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.7.8 (??/??/????):
	General:
	* Fix the exceptions in purple-remote on Python 2.6+. (Ari Pollak)
	  (#12151)

	Gadu-Gadu:
	* Updated our bundled libgadu and minimum requirement for external
	  libgadu to 1.9.0. (#12789)

	MSN:
	* Don't show ourselves in the list of endpoints that can be disconnected.

version 2.7.7 (11/23/2010):
	General:
	* Allow multiple CA certificates to share the same Distinguished Name
	  (DN).  Partially fixes remaining MSN issues from #12906.
	* The GNUTLS SSL plugin now discards any certificate (and all subsequent
	  certificates) in a chain if it did not sign the previous certificate.
	  Partially fixes remaining MSN issues from #12906.
	* Open requests related to a file transfer are now closed when the request
	  is cancelled locally. (#11666)

	AIM and ICQ:
	* AIM should now connect if "Use clientLogin" is turned off and the
	  "Server" field is set to anything other than "login.oscar.aol.com" or
	  "slogin.oscar.aol.com". (#12948)
	* Fix a crash on connection loss. (#5927)

version 2.7.6 (11/21/2010):
	General:
	* Included Microsoft Internet Authority 2010 and Microsoft Secure Server
	  Authority 2010 intermediate CA certificates to our bundle.  This fixes
	  the "Unable to validate certificate" error for omega.contacts.msn.com.
	  (#12906)

	Pidgin:
	* Avoid a use-after-free race condition in the media code (when
	  there's an error reported by GStreamer). (#12806, Jakub Adam)

	AIM and ICQ:
	* SSL option has been changed to a tri-state menu with choices for
	  "Don't Use Encryption", "Use Encryption if Available", and "Require
	  Encryption".
	* Fix some possible clientLogin URL issues introduced in version 2.7.5.
	* Don't show a "<URL>: Ok" connection error when using clientLogin.
	* Cleaned up some debug output for improved readability.

	MSN:
	* Added support for MSNP16, including Multiple Points of Presence (MPOP)